--- a/client/src/components/Cart/CartListItem/_cartListItem.scss
+++ b/client/src/components/Cart/CartListItem/_cartListItem.scss
@@ -1,181 +1,192 @@
-.products-list{
-     .product__list{
-          width: 100%;
-          height: auto;
-          display: flex;
-          flex-direction: row;
-          align-items: stretch;
-          position: relative;
-          padding: 20px 0;
-          border-bottom: 1px solid #ababab;
-          .sale{
-               position: absolute;
-               top: 7%;
-               left: 12.5%;
-               transform: translate(-50%, -50%);
-               height: 20px;
-               width: 45px;
-               z-index: 99999;
-               border-radius: 0 0 15px 15px;
-               background-color: #2a2a2a;
-               color: #fff;
-               font-size: 12px;
-               text-align: center;
+.cart__products__list{
 
-          }
-          .product-pictures{
-               transition: display ease-in-out 2s 2s;
+     .products-list{
+          .product__list{
+               width: 100%;
+               height: auto;
+               display: flex;
+               flex-direction: row;
+               align-items: stretch;
                position: relative;
-               width: 25%;
-               img{
-                    width: 100%;
-                    vertical-align: middle;
-                    cursor: pointer;
-
-               }
-               button{
+               padding: 20px 0;
+               border-bottom: 1px solid #ababab;
+               .sale{
+                    position: absolute;
+                    top: 7%;
+                    left: 12.5%;
+                    transform: translate(-50%, -50%);
+                    height: 20px;
+                    width: 45px;
+                    z-index: 99999;
+                    border-radius: 0 0 15px 15px;
                     background-color: #2a2a2a;
                     color: #fff;
-                    padding: 8px 15px;
-                    position: absolute;
-                    bottom: 0;
-                    display: none;
+                    font-size: 12px;
+                    text-align: center;
+     
                }
-               &:hover{
-                    button{
+               .product-pictures{
+                    transition: display ease-in-out 2s 2s;
+                    position: relative;
+                    width: 25%;
+                    img{
+                         width: 100%;
+                         vertical-align: middle;
                          cursor: pointer;
-
-                         display: inline;
+     
                     }
-                    .add-to-cart{
-                         left: 50%;
-                         img{
-                              width: 15px;
-                              height: 15px;
-                         }
+                    button{
+                         background-color: #2a2a2a;
+                         color: #fff;
+                         padding: 8px 15px;
+                         position: absolute;
+                         bottom: 0;
+                         display: none;
                     }
-                    .quick-view{
-                         
-                         left: 10px;
-                    }
-               }
-          }
-         .product-details{
-              width: 75%;
-              margin-left: 20px;
-               .product-name{
-                    padding: 5px;
-                    &:visited{
-                         color: var(--orange);
-                    }
-                    .product-link{
-                         color: var(--orange);
-                         text-decoration: none;
-                         padding: 15px 0;
-                         font-weight: 500;
-                         margin-top: 10px;
-                         
-                    }
-               }
-               .product-prices{
-                    padding: 10px 0;
-                    .product-price{
-                         width: 60px;
-                         height: 35px;
-                         padding: 5px;
-                    }
-                    .new-price{
-                         color: var(--black);
-                         font-weight: 700;
-                    }
-                    .old-price{
-                         color: #ababab;
-                    }
-               }
-               
-               .product-options{
-                    display: flex;
-                    flex-wrap: nowrap;
-                    flex-direction: column;
-                    justify-content: space-between;
-                    align-items: flex-start;
-                    margin-top: 10px;
-                    .product-description{
-                         font-size: 14px;
-                         color: #ababab;
-                         line-height: 1.6;
-                         padding: 10px 0;
-                         border-bottom: 1px solid #ababab;
-                    }
-                    .product-buttons{
-                         padding: 20px 0;
-                         .product-button{
-                              width: 35px;
-                              height: 35px;
-                              vertical-align: middle;
-                              background-color: #fff;
-                              font-size: 15px;
+                    &:hover{
+                         button{
                               cursor: pointer;
-                              &:hover{
-                                   background-color: #d58e32;
-                              }
+     
+                              display: inline;
                          }
                          .add-to-cart{
-                              vertical-align: middle;
-                              background-color: #2a2a2a;
-                              color: var(--white);
+                              left: 50%;
                               img{
-                                   vertical-align: inherit;
-                                   width: 30px;height: auto;
-                              }
-                              &:hover{
-                                   cursor: pointer;
-                                   background-color: #d58e32;
+                                   width: 15px;
+                                   height: 15px;
                               }
                          }
-                         .button-favorite{
-                              &::before{
-                                   content: "\2661" ;
-                              }
-                         }
-                         .button-compare{
-                              &::before{
-                                   content: "\21C4" ;
-                              }
-                         }
-                         .button-delete{
-                              &::before{
-                                   content: "X" ;
-                              }
-                         }
-                    }
-                    .product-quantity{
-                         padding: 15px 0;
-                         .quantity__button{
-                              width: 40px;
-                              height: 40px;
-                              border-radius: 50%;
-                              cursor: pointer;
-                              background-color: var(--white);
-                              color: var(--black);
-                              font-size: 16px;
-                              &:hover{
-                                   background-color: var(--orange);
-                                   color: var(--white);
-                              }
-                         }
-                         span{
-                              width: 50px;
-                              text-align: center;
-                              height: 30px;
-                              margin: 0 15px;
-                              border-radius: 10px;
-                              font-size: 16px;
+                         .quick-view{
+                              
+                              left: 10px;
                          }
                     }
                }
-         }
+              .product-details{
+                   width: 75%;
+                   margin-left: 20px;
+                    .product-name{
+                         padding: 5px;
+                         &:visited{
+                              color: var(--orange);
+                         }
+                         .product-link{
+                              color: var(--orange);
+                              text-decoration: none;
+                              padding: 15px 0;
+                              font-weight: 500;
+                              margin-top: 10px;
+                              
+                         }
+                    }
+                    .product-prices{
+                         padding: 10px 0;
+                         .product-price{
+                              width: 60px;
+                              height: 35px;
+                              padding: 5px;
+                         }
+                         .new-price{
+                              color: var(--black);
+                              font-weight: 700;
+                         }
+                         .old-price{
+                              color: #ababab;
+                         }
+                    }
+                    
+                    .product-options{
+                         display: flex;
+                         flex-wrap: nowrap;
+                         flex-direction: column;
+                         justify-content: space-between;
+                         align-items: flex-start;
+                         margin-top: 10px;
+                         .product-description{
+                              font-size: 14px;
+                              color: #ababab;
+                              line-height: 1.6;
+                              padding: 10px 0;
+                              border-bottom: 1px solid #ababab;
+                         }
+                         .product-buttons{
+                              padding: 20px 0;
+                              .product-button{
+                                   width: 35px;
+                                   height: 35px;
+                                   vertical-align: middle;
+                                   font-size: 15px;
+                                   cursor: pointer;
+                                   background-color: var(--white);
+                                   &:hover{
+                                        background-color: #d58e32;
+                                   }
+                              }
+                              .add-to-cart{
+                                   vertical-align: middle;
+                                   background-color: #2a2a2a;
+                                   color: var(--white);
+                                   img{
+                                        vertical-align: inherit;
+                                        width: 30px;height: auto;
+                                   }
+                                   &:hover{
+                                        cursor: pointer;
+                                        background-color: #d58e32;
+                                   }
+                              }
+                              .button-favorite{
+                                   &::before{
+                                        content: "\2661" ;
+                                   }
+                              }
+                              .button-favorite-full{
+                                   &::before{
+                                        content: "\2661" ;
+                                        color: var(--black);
+                                   }
+                                   border-color: #d58e32;
+                                   background-color: #d58e32;
+                              }
+                              .button-compare{
+                                   &::before{
+                                        content: "\21C4" ;
+                                   }
+                              }
+                              .button-delete{
+                                   &::before{
+                                        content: "X" ;
+                                   }
+                              }
+                         }
+                         .product-quantity{
+                              padding: 15px 0;
+                              .quantity__button{
+                                   width: 40px;
+                                   height: 40px;
+                                   border-radius: 50%;
+                                   cursor: pointer;
+                                   background-color: var(--white);
+                                   color: var(--black);
+                                   font-size: 16px;
+                                   &:hover{
+                                        background-color: var(--orange);
+                                        color: var(--white);
+                                   }
+                              }
+                              span{
+                                   width: 50px;
+                                   text-align: center;
+                                   height: 30px;
+                                   margin: 0 15px;
+                                   border-radius: 10px;
+                                   font-size: 16px;
+                              }
+                         }
+                    }
+              }
+               
+          }
           
      }
-     
 }
