--- a/client/src/components/Home/LatestBlog/styles/_latest-blog-header.scss
+++ b/client/src/components/Home/LatestBlog/styles/_latest-blog-header.scss
@@ -26,6 +26,9 @@
                     margin-left: 15px;
                     border-radius: 50%;
                     background-color: #e2e2e2;
+                    &:hover{
+                         background-color: var(--orange);
+                    }
                }
                .active{
                     background-color: #d58e32;
