--- a/client/src/components/ProductPage/BestSellers/styles/_newest-products-header.scss
+++ b/client/src/components/ProductPage/BestSellers/styles/_newest-products-header.scss
@@ -28,6 +28,9 @@
                     margin-left: 15px;
                     border-radius: 50%;
                     background-color: #e2e2e2;
+                    &:hover{
+                         background-color: var(--orange);
+                    }
                }
                .active{
                     background-color: var(--orange);
