--- a/client/src/components/ProductPage/ProductSimilar/styles/_product-similar-header.scss
+++ b/client/src/components/ProductPage/ProductSimilar/styles/_product-similar-header.scss
@@ -27,6 +27,9 @@
                border-radius: 50%;
                cursor: pointer;
                background-color: #e2e2e2;
+               &:hover{
+                    background-color: var(--orange);
+               }
           }
           .active{
                background-color: var(--orange);
