--- a/client/src/components/Base/User/register/_register.scss
+++ b/client/src/components/Base/User/register/_register.scss
@@ -3,7 +3,7 @@
      h3{
           font-size: 25px;
           font-weight: 600;
-          margin-top: 10px;
+          margin-top: 5px;
           text-align: center;
      }
      .user__info{
@@ -15,8 +15,9 @@
           flex-wrap: wrap;
           align-items: center;
           p{
+               margin-bottom: 10px;
                font-size: 15px;
-               padding: 15px 0px;
+               padding: 5px 0px;
           }
           .block__item{
                width: 100%;
@@ -36,6 +37,10 @@
                     width: 118%;
                     padding-top: 10px;
                     display: block;
+                    span{
+                         display: block;
+                         margin-top: 5px;
+                    }
                }
           }
           .gender__block{
@@ -56,6 +61,7 @@
           background-color: var(--black);
           padding: 11px 15px;
           cursor: pointer;
+          
      }
 
 }
