create Galery page, filter products from subcategories and bug fixes

--- a/client/src/components/Base/Header/MenuBurger/styles/_menu-burger.scss
+++ b/client/src/components/Base/Header/MenuBurger/styles/_menu-burger.scss
@@ -34,7 +34,9 @@
      }
      .burger_list_item{
           padding: 10px 0;
-          a{
+          .menu-burger-link{
+               width: 100%;
+               display: block;
                text-decoration: none;
                color: var(--white);
           }
