--- a/client/src/components/Base/Header/styles/_login-register.scss
+++ b/client/src/components/Base/Header/styles/_login-register.scss
@@ -11,7 +11,7 @@
           .register-link{
                color: var(--white);
                text-decoration: none;
-               padding: 10px;
+               padding: 10px 0;
                &:hover{
                     cursor: pointer;
                     background-color: var(--orange);
