--- a/client/src/components/ProductPage/BestSellers/styles/_newest-products-header.scss
+++ b/client/src/components/ProductPage/BestSellers/styles/_newest-products-header.scss
@@ -1,40 +1,73 @@
-.newest__products__header{
-     margin-top: 20px;
-     .categories{
-          span {
-               font-size: 20px;
-               color: #d58e32;
-               font-weight: 500;
+.newest__products__container{
+     .newest__products__header{
+          margin-top: 20px;
+          .categories{
+               span {
+                    font-size: 20px;
+                    color: #d58e32;
+                    font-weight: 500;
+               }
           }
-     }
-     .category-line-circle{
-          display: flex;
-          align-items: center;
-          .category-line{
-               width: 90%;
-               height: 2px;
-               background-color: #e2e2e2;
-
-          }
-          .circles{
-               width: 90px;
-               height: 15px;
+          .category-line-circle{
                display: flex;
-               margin-left: 35px;
-               .circle{
-                    width: 5px;
-                    height: 5px;
-                    padding: 5px;
-                    margin-left: 15px;
-                    border-radius: 50%;
+               align-items: center;
+               .category-line{
+                    width: 90%;
+                    height: 2px;
                     background-color: #e2e2e2;
-                    &:hover{
+
+               }
+               .circles{
+                    width: 90px;
+                    height: 15px;
+                    display: flex;
+                    margin-left: 35px;
+                    .circle{
+                         width: 5px;
+                         height: 5px;
+                         padding: 5px;
+                         margin-left: 15px;
+                         border-radius: 50%;
+                         background-color: #e2e2e2;
+                         &:hover{
+                              background-color: var(--orange);
+                         }
+                    }
+                    .active{
                          background-color: var(--orange);
                     }
-               }
-               .active{
-                    background-color: var(--orange);
                }
           }
      }
 }
+
+@media screen and (max-width:1280px){
+     .newest__products__header{
+          width: 100vw;
+     }
+ }
+@media screen and (max-width:1024px){
+     .newest__products__header{
+          width: 140vw;
+     }
+ }
+ @media screen and (max-width:996px){
+      .newest__products__header{
+           width: 150vw;
+      }
+  }
+ @media screen and (max-width:648px){
+      .newest__products__header{
+           width: 200vw;
+      }
+  }
+ @media screen and (max-width:480px){
+      .newest__products__header{
+           width: 220vw;
+      }
+  }
+ @media screen and (max-width:320px){
+      .newest__products__header{
+           width: 260vw;
+      }
+  }
